--- a/Руководства/Работа с несколькими хранилищами.md
+++ b/Руководства/Работа с несколькими хранилищами.md
@@ -1,19 +1,19 @@
-Собрание заметок в Obsidian называется хранилищем. Хранилище сосотоит из папки и всех ее подпапок. Прямо сейчас вы смотрите на хранилище `Справка Obsidian`, которое представляет собой просто папку с файлами, включенными в Obsidian.
+Собрание заметок в Obsidian называется хранилищем. Хранилище состоит из папки и всех ее подпапок. Прямо сейчас вы смотрите на хранилище `Справка Obsidian`, которое представляет собой просто папку с файлами, включенными в Obsidian.
 
 Вы можете открыть другое хранилище где угодно на вашем компьютере и оно сохранит свои собственные индивидуальные [[Список плагинов|плагины]] и [[Добавление пользовательских CSS|стили оформления]]. Это полезно, например, если у вас есть одно хранилище, в котором вы храните заметки и другое хранилище, в котором вы пишете в развернутой форме.
 
-Новое или существующее хранилище можно открыть с помощью кнопки чуть выше шестеренки «Настройки».
+Новое или существующее хранилище можно открыть с помощью кнопки чуть выше шестеренки кнопки «Настроек».
 
 ![[Vault picker.png]]
 
-You have the option to either open an existing folder of markdown files, create a new vault (which essentially just creates a new folder that you will put markdown files into), or opening a special vault containing these help files. The Help Vault is stored in a special Obsidian directory (see [[Как Obsidian хранит данные]]), but aside from that, it's a directory of files just like any other.
+У вас есть возможность открыть уже существующую папку с файлами Markdown, создать новое хранилище (которое, по сути, просто создать новую папку, в которую вы будете помещать файлы Markdown), либо открыть специальное хранилище, содержащее файлы этой справки. Хранилище справки хранится в специальном каталоге Obsidian (см. [[Как Obsidian хранит данные]]), но в остальном – это такой же каталог файлов, как и любой другой. 
 
-[[Создание внутренних ссылок|Internal Links]] are not shared across Vaults. If you have one Vault inside another Vault, this can get confusing, so we recommend not doing that.
+[[Создание внутренних ссылок|Внутренние ссылки]] не используются совместно между хранилищами. Если у вас есть хранилище внутри другого хранилища, это может привести к сложностям, мы не рекомендуем так делать.
 
-Always remember, a Vault is just a collection of markdown files. You can use whatever file management techniques you would normally to move them around on your file system, and Obsidian will automatically refresh to keep up.
+Всегда помните, что хранилище – это просто набор файлов Markdown. Вы можете использовать любые методы управления файлами, которые вы обычно использовали бы для перемещения их в своей файловой системе, и Obsidian будет автоматически обновляться, учитывать изменения.
 
-### Transfer settings between vaults
+### Перемещение настроек между хранилищами
 
-All settings, themes, and plugins are stored in the `.obsidian` folder under your vault. If you copy this folder from one vault to another, all the settings will be transferred as well. You may need to restart Obsidian for all of the settings to take effect.
+Все настройки, тема оформления и плагины хранятся в папке `.obsidian` внутри вашего хранилища. Если вы скопируете эту папку из одного хранилища в другое, все настройки будут так же перенесены. Возможно, вам потребуется перезапустить Obsidian, чтобы все настройки вступили в силу.
 
-This folder is hidden in some operating systems. Notably, you can use `Cmd-Shift-Period` to show hidden files on macOS in order to reveal the `.obsidian` folder.
+В некоторых операционных системах данная папка может быть скрытой. В частности, вы можете использовать `Cmd-Shift-Period` для отображения скрытых файлов в macOS, чтобы открыть папку `.obsidian`.
