--- a/Области/Расположение областей.md
+++ b/Области/Расположение областей.md
@@ -1,52 +1,51 @@
-One of the things that makes Obsidian different from other note-taking apps is how easy it is to open multiple files in your preferred configuration.
+Одна из вещей, которая отличает Obsidian от других приложений для создания заметок – это то, насколько легко открыть несколько файлов в выбранном вами расположении.
 
-The window a file gets opened in is what we call a "pane". You can have as many panes as you like.
+Окно, в котором открывается файл, мы называем «областью». Вы можете использовать сколько угодно областей. 
 
-### Open new panes
+### Способы открытия новых областей
 
-#### Open links
+#### Открытие ссылок
 
-In general, you can click a link to a file while holding Ctrl (on Windows and Linux) or Cmd (on macOS) to open it in a new pane. This includes clicking on files in [[Файловый менеджер]], [[Поиск]] results, [[Обратные ссылки]], [[Граф]], etc.
+Как правило, вы можете щелкнуть по ссылке на файл, удерживая `Ctrl` (в Windows и Linux) или `Cmd` (в macOS), чтобы открыть его в новой области. Это включает в себя щелчок по файлам в [[Файловый менеджер|файловом менеджере]], в результатах [[Поиск|поиска]], в [[Обратные ссылки|обратных ссылках]], в [[Граф|Графе]] и так далее. 
 
-The only notable exception is in the editor. Because in the editor, a single click edits the link text rather than following it, `Ctrl/Cmd-Click` is used to follow the link. Therefore, you'll need to hold Shift in addition to Ctrl/Cmd in order to open the link in a new pane.
+Заметным исключением является работа в режиме редактирования. Поскольку в режиме редактирования щелчок по ссылке ведет к ее редактированию, а не к переходу по ней, как это происходит в случае удерживания `Ctrl/Cmd` с щелчком по ссылке. Поэтому вам нужно будет удерживать `Shift` в дополнение к `Ctrl/Cmd`, чтобы открыть ссылку в новой области.
 
-#### Split current pane
+#### Разделение текущей области
 
-You can also use the "More options" menu option of a pane to select "Split vertically" or "Split horizontally" to open two copies of that file.
+Вы можете использовать меню в правом верхнем углу области, чтобы выбрать пункты «Разделить по вертикали» или «Разделить по горизонтали» для открытия копии текущего файла в отдельной области.
 
-#### Open linked views
+#### Открытие связанных областей
 
-Some options in the "More options" menu will also open a new pane that's linked to the current pane, such as "Open backlinks" and "Open local graph".
+Некоторые параметры меню также открывают дополнительную область, связанную с текущей, такие как «Показать обратные ссылки» и «Открыть граф».
 
-### Rearrange panes
+### Перегруппировка областей
 
-To move a pane, simply drag the pane icon in the top left corner of the pane. As you drag it around, a visual indicator will appear to show where the pane will be placed. Dropping onto each of the four sides of an existing pane creates a horizontal or vertical split, and dropping in the center swaps positions with the target pane. 
+Для перемещения области, просто потяните за иконку области в левом верхнем углу. Когда вы перетаскиваете область, места, куда можно ее переместить будут визуально выделены. Перенос в одну из четырех частей соседней области создает горизонтальный или вертикальный разделитель между областями. А перенос в центральную часть соседней области меняет их местами.
 
-You can also drag panes into the two sidebars. Panes in the sidebar work a bit differently, for more please see the [[Расположение областей#Panes in the sidebar]] section below.
+Вы также можете перемещать области в боковые панели. Области расположенные на боковых панелях работают немного по-другому, для получения дополнительной информации см. раздел [[Расположение областей#Области в боковой панели|Области в боковой панели]] ниже.
 
-### Panes in the sidebar
+### Области в боковой панели
 
-There are some differences with panes that live in the sidebars.
+Есть некоторые особенности работы с областями, которые находятся в боковых панелях. 
 
-#### Sidebar panes can share space with tabs
+#### Области в боковой панели делят пространство с вкладками
 
-When your drop a pane onto a sidebar pane, a new tab will be created under that sidebar section. Different panes in the same sidebar section can be accessed by clicking on its tab icon.
+Когда вы перетаскиваете область в боковую панель, там для нее создается новая вкладка. Доступ к различным областям в боковой панели можно получить щелкнув на соответствующий значок вкладки.
 
-#### Sidebar panes do not show titles
+#### Области в боковой панели не отображают имя файла
 
-This reduces clutter, but also means it's best to keep one or two important files like a scratch pad or the daily note for quick access, rather than having a dozen files open.
+Это уменьшает беспорядок, но также означает, что там лучше хранить один или два важных файла для быстрого доступа, такие как черновик или ежедневная заметка, и не держать там дюжину файлов.
 
-To see the title of a file that's in the sidebar, hover over its tab icon.
+Для просмотра имени файла в боковой панели наведите курсов на значок его вкладки.
 
-#### Sidebar can be easily collapsed
+#### Бокова панель может быть легко свернута
 
-If there are panes that you only need to look at from time to time, having them in the sidebar makes it really easy to toggle them with a hotkey or command.
+Боковая панель может использоваться для областей, просмотр которых вам нужен только время от времени, так как ее можно легко свернуть с помощью сочетания клавиш или команды.
 
-#### Toggle editor and preview in sidebar
+#### Переключение режимов редактирования и просмотра в боковой панели
 
-The hotkey to toggle between editor and preview only works in the main workspace. In the sidebar, you'll need to right click on the tab icon and select "Preview" or "Edit" to toggle between two modes.
+Сочетание клавиш для переключения между режимами редактирования и просмотра работает только в основном рабочем пространстве. В боковой панели вам необходимо использовать меню, которое можно вызвать по правому щелчку на вкладке файла, и выбрать «Просмотр» или «Редактировать» в зависимости от текущего режима области.
 
-### Save and load pane layouts
+### Сохранение и загрузка расположения областей
 
-The [[Пространства]] plugin makes it easy to come back to a particular pane layout. Give it a try!
-
+Плагин [[Пространства]] позволяет легко вернуться к определенному варианту расположения областей. Попробуйте его!
