--- a/Плагины/Граф.md
+++ b/Плагины/Граф.md
@@ -1,27 +1,25 @@
+Показывает [[Создание внутренних ссылок|внутренние ссылки]] между вашими заметками в виде графа.
 
-
-Shows a graph representation of the [[Создание внутренних ссылок|internal links]] between your notes.
-
-Notes with more notes referencing it appear as bigger nodes on the graph.
+Заметки с большим количеством ссылок появляются на графе как более крупные узлы.
 
 ![[Pasted image 10.png]]
 
-### Visualization tips
+### Советы по визуализации
 
-- You can hover each node to highlight its connections, fading everything else.
-- You can drag nodes around to rearrange the graph. This may be helpful if some nodes are overlaying others.
+- Вы можете навести курсор на каждый узел, чтобы выделить его соединения, затеняя все остальное.
+- Вы можете перетаскивать узлы, чтобы упорядочить граф. Это может быть полезно, если некоторые узлы перекрывают друг друга.
 
-### Navigation tips
+### Советы по перемещению
 
-- To zoom, you can use mouse wheel scroll, as well as the `+` and `-` keys.
-- To pan around, drag the background or use the keyboard arrow keys.
-- Hold `Shift` while navigating with the keyboard to speed things up.
+- Для масштабирования можно использовать прокрутку колесика мыши, а так же клавиши `+` и `-`.
+- Для перемещения, перетаскивайте фон или используйте клавиши со стрелками на клавиатуре.
+- Удерживайте клавишу `Shift` во время навигации, чтобы ускорить процесс.
 
-### Custom CSS
+### Пользовательский CSS
 
-Since the graph is rendered using `<canvas>` and WebGL, [[Пользовательский CSS|CSS]] is unable to affect things like nodes and links. To customize graph view, we have provided a way to convert CSS colors into WebGL commands.
+Поскольку граф визуализируется с использованием `<canvas>` и WebGL, [[Пользовательский CSS|CSS]] не может влиять на такие вещи, как узлы и ссылки. Чтобы настроить представление графа, мы предоставили способ преобразования цветов CSS в команды WebGL.
 
-#### The following CSS classes are supported:
+#### Поддерживаются следующие классы CSS: 
 
 ```
 .graph-view.color-fill
@@ -36,9 +34,9 @@ Since the graph is rendered using `<canvas>` and WebGL, [[Пользовател
 .graph-view.color-fill-unresolved
 ```
 
-\* theme-dependent means you may have to add `.theme-dark` or `.theme-light` to style it for different themes. See [[Граф#Custom CSS#Defaults]] for explanation.
+\* theme-dependent означает, что вам, возможно, придется добавить `.theme-dark` или `.theme-light` для модификации под различные темы оформления. См. раздел [[Граф#Правила CSS используемые по умолчанию|Правила CSS используемые по умолчанию]] ниже.
 
-#### The following CSS rules are supported:
+#### Поддерживаются следующие правила CSS:
 
 ```css
  .graph-view.color-class {
@@ -52,9 +50,9 @@ Since the graph is rendered using `<canvas>` and WebGL, [[Пользовател
 }
 ```
 
-#### Defaults:
+#### Правила CSS используемые по умолчанию:
 
-These CSS rules are the ones Obsidian use by default. You may override any of them using an identical or [more specific](https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity) CSS rule. This applies especially to `.color-fill-tag` and `.color-fill-attachment` As a last resort, add `!important` to the end of your rule.
+Данные CSS-правила используются в Obsidian по умолчанию. Вы можете переопределить любое из них, используя идентичное или [более специфичное](https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity) CSS-правило. Особенно это касается `.color-fill-tag` и `.color-fill-attachment`. В крайнем случае, добавьте `!important` в конец вашего правила.
 
 ```css
 .graph-view.color-fill,
