--- a/Плагины/Панель тегов.md
+++ b/Плагины/Панель тегов.md
@@ -1,6 +1,6 @@
 Добавляет на правую панель отдельную вкладку, на которой отображаются все имеющиеся у вас теги, а также их количество.
 
-При нажатии на тег активируется поиск по этому тегу. Для удаления тега или добавления в поиск дополнительного тега, нажмите на него удерживая `Ctrl/Cmd`.
+При нажатии на тег активируется поиск по этому тегу. Для добавления в поиск дополнительного тега или его удаления, щелкните по нему удерживая `Ctrl/Cmd`.
 
 ### Сортировка
 
@@ -8,7 +8,7 @@
 
 ### Вложенные теги
 
-Если вы напишите название тегов в формате `#inbox/to-read` и `#inbox/processing`, вы сможете включить отображение вложенных тегов в виде древовидного спика, а не просто плоского. 
+Если вы напишите название тегов в формате `#inbox/to-read` и `#inbox/processing`, вы сможете включить отображение вложенных тегов в виде древовидного списка, а не просто плоского. 
 
 В режиме отображения плоского списка, панель тегов выглядит следующим образом:
 
