--- a/Плагины/Пространства.md
+++ b/Плагины/Пространства.md
@@ -1,4 +1,4 @@
-Плагин «Пространства» позволяет вам сохранять «состояние рабочей области» приложения. Каждая рабочая область включает в себя разметку областей, состояние боковых панелей (свернуты или развернуты) и открытых файлов.
+Плагин «Пространства» позволяет вам сохранять рабочее пространство приложения. Каждое рабочее пространство включает в себя расположение областей, состояние боковых панелей (свернуты или развернуты) и открытых файлов.
 
 ![[Pasted image 19.png]]
 
@@ -10,8 +10,8 @@
 
 ### Загрузить пространство
 
-Для загрузки пространства, откройте разздел управления пространствами и нажмите на кнопку «Загрузить» напротив пространства, которые вы хотите загрузить. Или воспользуйтесь комадой «Загрузить пространство» в палитре команд для выбора определенного пространства.
+Для загрузки пространства, откройте раздел управления пространствами и нажмите на кнопку «Загрузить» напротив пространства, которое вы хотите загрузить. Или воспользуйтесь командой «Загрузить пространство» в палитре команд для выбора определенного пространства.
 
 ### Команды
 
-Данный плагин имеет две команды доступные черезе [[Палитра команд]]: «Пространство» и «Загрузить пространство». Вы можете задать для них сочетания клавиш.
+Данный плагин имеет две команды доступные через [[Палитра команд|Палитру команд]]: «Пространство» и «Загрузить пространство». Вы можете задать для них сочетание клавиш.
