--- a/Руководства/Работа с несколькими заметками.md
+++ b/Руководства/Работа с несколькими заметками.md
@@ -6,7 +6,7 @@
 
 По умолчанию, когда вы щелкаете по чему-либо, оно открывается в активной области. Активная область отмечена выделенной полосой под заголовком, а имя открытого файла отображается ярче, чем в неактивной области. 
 
-Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы щелкаете по чему-либо в режиме Просмотра и `Shift + Ctrl/Cmd` в режиме Редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
+Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы щелкаете по чему-либо в режиме Просмотра и `Shift + Ctrl/Cmd` в режиме Редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] %%работа с обратными ссылками%% (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
 
 ---
 
@@ -42,7 +42,7 @@
 
 ##### 5. Области могут быть ==перегруппированы перетаскиванием==.
 
-Тяните за значок в левом верхнем углу, чтобы расположить их так, как вам нужно. Для получения более подробной информации см. [[Расположение областей]].
+Тяните за иконку области в левом верхнем углу, чтобы расположить их так, как вам нужно. Для получения более подробной информации см. [[Расположение областей]].
 
 ---
 
