--- a/Руководства/Работа с несколькими хранилищами.md
+++ b/Руководства/Работа с несколькими хранилищами.md
@@ -8,7 +8,7 @@
 
 У вас есть возможность открыть уже существующую папку с файлами Markdown, создать новое хранилище (которое, по сути, просто создать новую папку, в которую вы будете помещать файлы Markdown), либо открыть специальное хранилище, содержащее файлы этой справки. Хранилище справки хранится в специальном каталоге Obsidian (см. [[Как Obsidian хранит данные]]), но в остальном – это такой же каталог файлов, как и любой другой. 
 
-[[Создание внутренних ссылок|Внутренние ссылки]] не используются совместно между хранилищами. Если у вас есть хранилище внутри другого хранилища, это может привести к сложностям, мы не рекомендуем так делать.
+[[Создание внутренних ссылок|Внутренние ссылки]] не используются совместно между хранилищами. Если у вас есть хранилище внутри другого хранилища, это может привести к сложностям в работе, мы не рекомендуем так делать.
 
 Всегда помните, что хранилище – это просто набор файлов Markdown. Вы можете использовать любые методы управления файлами, которые вы обычно использовали бы для перемещения их в своей файловой системе, и Obsidian будет автоматически обновляться, учитывать изменения.
 
