--- a/Руководства/Работа с обратными ссылками.md
+++ b/Руководства/Работа с обратными ссылками.md
@@ -1,13 +1,13 @@
 Обратные ссылки – одна из самых мощных функций Obsidian. Однако иногда их использование может сбить с толку. Далее размещены некоторые советы, которые могут помочь вам.
 
-Панель обратных состояит из двух разделов – «Упоминания со ссылокой» и «Упоминания без ссылки»:
+Панель обратных состоит из двух разделов – «Упоминания со ссылокой» и «Упоминания без ссылки»:
 
 ![[Backlinks.png]]
 
-Как вы можете видить, в этом документе в настоящее время в каждом разделе есть по одной записи. В разделе Связанных упоминаний вы можете видеть, что я создал ссылку на этот документ в заметке [[Связанная область]]. Однако в разделе «Упоминания без ссылки» вы также можете видеть, что я написал название этой заметки, но не сделал её ссылкой. %%#2do%% 
+Как вы можете видеть, в этом документе в настоящее время в каждом разделе есть по одной записи. В разделе «Упоминания со ссылкой» вы можете видеть, что я создал ссылку на этот документ в заметке [[Связанная область]]. Однако в разделе «Упоминания без ссылки» вы также можете видеть, что я написал название этой заметки, но не сделал её ссылкой.
 
-Это может быть очень эффективным способом нахождения связей между вашими заметками, о которых вы не знали, когда писали их. Например, если вы назвали одну заметку определённым концептом, который часто встречается в вашей области, вы сможете леко понять, когда этот концепт упоминается в других заметках, и, таким образом, вы сможете найти новые взаимосвязи между вашими идеями, которых не было видно до этого.
+Это может быть очень эффективным способом нахождения связей между вашими заметками, о которых вы не знали, когда писали их. Например, если вы назвали одну заметку определенной идеей, которая часто встречается в вашей области, вы сможете леко понять, когда эта идея упоминается в других заметках, и, таким образом, вы сможете найти новые взаимосвязи между вашими идеями, которых не было видно до этого.
 
-Если ссылка появляется в «Упоминаниях без ссылки», и вы хотите связать её, при наведении курсора на текст появится специальная кнопка для выполенения этой операции. Нажатие этой кнопки автоматически добавит выделенный текст в скобки, создав прямую ссылку.
+Если ссылка появляется в «Упоминаниях без ссылки», и вы хотите связать её, при наведении курсора на текст упоминания, нажмите на появишуюся кнопка «Ссылка». Нажатие этой кнопки автоматически добавит выделенный текст в скобки, создав прямую ссылку.
 
-Вы также можете создать отдельную область с обратными ссылоками через меню дополнительных настроек «Еще». Это  будет [[Связанная область|связанная область]] соединённая с заметкой, и как описано в [[Расположение областей|Размещении областей]], эту область можно передвигать куда угодно. Эту функцию можно также реализовать в [[Палитра команд|палитре команд]].
+Вы также можете создать отдельную область с обратными ссылками через меню дополнительных настроек «Еще». Это будет [[Связанная область]] соединённая с заметкой, и как описано в разделе [[Расположение областей]], эту область можно передвигать куда угодно. Эту функцию можно также реализовать в [[Палитра команд|Палитре команд]].
