20210503 -- basic translation is finished 🎉
20210503 -- basic translation is finished 🎉

--- a/Плагины/Поиск.md
+++ b/Плагины/Поиск.md
@@ -1,79 +1,79 @@
 ![[Search.png]]
 
-Search is a powerful feature, and has the potential to be confusing. In most cases, if you just type what you want to find, it will work. But search has many capabilities for narrowing down to find exactly what you want.
+Поиск является мощной функцией и может смутить своей сложностью. В большинстве случаев, если вы просто напечатаете то, что хотите найти, это сработает. Но у поиска есть много возможностей для уточнения, чтобы найти именно то, что вы хотите.
 
-## Quick tips
+## Быстрые советы
 
-### Start searching
+### Начните поиск
 
-You can invoke search by pressing `Ctrl-Shift-F` or `Cmd-Shift-F`. You can also customize this hotkey in Settings -> Hotkeys. When search is invoked, focus will be automatically put in the search bar so you can start typing your query right away.
+Вы можете вызвать поиск, нажав `Ctrl-Shift-F` или `Cmd-Shift-F`. Вы также можете настроить это сочетание клавиш в разделе Настройки => Сочетание клавиш. При вызове поиска курсор будет автоматически помещен в строку поиска, чтобы вы могли сразу же начать вводить свой запрос.
 
-### Search selected text
+### Поиск выделенного текста
 
-After you select text, you can search for it by simply invoking search like above.
+Вы можете выполнить поиск выделенного текста, просто вызвав поиск, как описано выше.
 
-## Search history
+## История поиска
 
-Obsidian will remember your most recently used search queries.
+Obsidian запомнит ваши последние использованные поисковые запросы.
 
-These queries will be presented to you when your search query is empty. You can click on any one of them to search for it again, allowing you to easily re-run previous queries.
+Эти запросы будут отображаться, когда ваш поисковый запрос пуст. Вы можете щелкнуть по любому из них, чтобы искать по нему снова, что позволит вам легко повторно выполнить предыдущие запросы.
 
-To clear search history, simply click on the "X" button.
+Чтобы очистить историю поиска, просто нажмите на кнопку `X`.
 
-## Search Settings
+## Настройки поиска
 
-There are a couple of toggles available while searching:
+Есть несколько переключателей, доступных во время поиска:
 
-- `Match case` toggle case sensitive matching, but note that it can be overridden on a per-search basis using the `match-case:` and `ignore-case:` operators explained above.
-- `Explain search term` will show you what the search query actually does in plain terms.
-- `Collapse results` will toggle between just showing matching note names and showing the lines in which matches appear. These extended results can be toggled for each note by clicking on the folding triangle next to the file name.
-- `Show more context` will expand the display of the matches to show more text around the match.
-- `Change sort order` sorts the results by various orders, similar to how files are sorted in the [[Файловый менеджер]].
+- `Учитывать регистр` переключает чувствительность к регистру, однако его состояние можно определить для каждого отдельного запроса используя операторы `match-case:` и `ignore-case:`.
+- `Объяснить поисковую строку` пояснит простыми словами, что делает определенный поисковый запрос.
+- `Свернуть результаты` переключает между отображением только имен найденных заметок и отображением строк, в которых найдены совпадения. Такие расширенные результаты поиска можно включать для каждой заметки индивидуально нажатием на треугольник рядом с именем заметки.
+- `Развернуть контекст` включает отображение дополнительного текста вокруг найденных совпадений.
+- `Порядок сортировки` сортирует результаты в различном порядке, аналогично тому, как файлы сортируются в [[Файловый менеджер|Файловом менеджере]].
 
-## Copy search results
+## Копирование результатов поиска
 
-To quickly and easily take your search results to a list, use the "copy search result" option.
+Чтобы быстро и легко получить результаты поиска в форме списка, используйте переключатель «Скопировать результат поиска».
 
-You can customize whether you want to show paths, which link style to use (wikilink or Markdown link), and how you want your list to appear.
+Вы можете настроить отображение имен файлов или путей до файлов, выбрать стиль используемых ссылок (Wiki-ссылки или Markdown-ссылки) и выбрать формат списка (простой, без нумерации или с нумерацией).
 
-## Embed search results
+## Вставка результатов поиска
 
-You can embed search results in a note.
+Вы можете вставить результаты поиска в заметку.
 
-For example, if you write:
+Например, если вы напишите:
 
 <pre><code>```query
-embed OR search
+вставка OR поиск
 ```</code></pre>
 
-You should see this embedded search view (note: it doesn't work on [[Obsidian Publish]] as of 2020/01/18):
+Вы должны увидеть вставку результатов поиска в заметке (примечание: это не работает в [[Obsidian Publish]] по состоянию на 18 января 2020 г.):
 
 ```query
-embed OR search
+вставка OR поиск
 ```
 
-## Search syntax
+## Язык поисковых запросов
 
-### Combing sub-queries
+### Сложные поисковые запросы
 
-When crafting a search query, remember that clicking "Explain Search Term" will give an explanation of what is being searched for, which can be very useful when debugging a complicated search.
+При создании поискового запроса не забывайте, что щелчок по переключателю «Объяснить поисковую строку» даст объяснение того, что ищется. Это может быть очень полезно при отладке сложного поискового запроса.
 
-- Words in the search query separated by space will be searched independently in each note. For example `foo bar` will find a note that includes both `foo` and `bar` anywhere in it.
-- `"Quoted strings"` can be used to search multiple consecutive words separated by space, or in other words, a phrase. So, searching for `"foo bar"` with quotes will only find notes that include those words next to each other. You can use backslash `\"` to escape double quotes if you actually want to search for a string that includes quotes. And `\\` will do the same for backslash.
-- Boolean operations can be used. Use `OR` to match one or another. Use `-` to negate a query. The space character is used for boolean "and".
-	- For example: `foo OR bar` will find all notes that contain either of those words, they don't have to be in the same note. `foo -bar` will find all notes that contain `foo`, but not if they also contain `bar`.
-- Parenthesis can be used to group boolean operations. For example `(a OR b) (c OR d)`. This can be useful when crafting complex searches to make sure things happen in the order you want.
-- Regular expressions (regex) can now be used in search. Use forward slash to denote a regular expression. For example: `/[a-z]{3}/`.
+- Разделенные пробелом слова в поисковом запросе будут искаться раздельно и независимо в каждой заметке. Например, `foo bar` покажет заметку в которой есть и `foo` и `bar` где угодно в заметке.
+- `"Строки в кавычках"` позволяют искать последовательность слов, разделенных пробелами, иначе говоря – фразы. Таким образом поиск `"foo bar"` с кавычками покажет только те заметки, в которых эти слова стоят последовательно. Можно использовать экранирующий-символ обратной косой черты перед кавычкой `\"` если вам необходимо найти строчку, в которой есть двойная кавычка. Использование `\\` поможет найти обратную косую черту.
+- Возможно использование логических операторов. Используйте `OR` для поиска одного ИЛИ другого. Используйте `-` для отрицательного запроса. Знак пробела используется вместо логического И.
+	- Например: `foo OR bar` найдет все заметки в которых есть одно из этих двух слов. `foo -bar` покажет все заметки в которых есть `foo`, кроме тех, в которых есть `bar`.
+- Круглые скобки могут использоваться для группировки логических операторов. Например, `((a OR b) (c OR d))`. Это может пригодиться при создании сложных запросов, в которых вам важен порядок проверки условий запроса.
+- Регулярные выражения (regex) также можно использовать в запросах. Используйте косую черту для обозначения границ регулярного выражения. Например: `/[a-z]{3}/`.
 
-### Search operators
+### Специальные поисковые операторы
 
-Several special operators are available. Some operators allow nesting queries using parenthesis, for example: `file:("to be" OR -"2B")`.
+Существует несколько специальных операторов. Некоторые операторы допускают вложенность запросов с применением круглых скобок. Например: `file:("to be" OR -"2B")`.
 
-- `file:` will perform the following subquery on the file name. For example: `file:".jpg"`. If you use Zettelkasten-style UIDs, this can be useful for narrowing a time range, for example `file:"202007"`for files created in July of 2020.
-- `path:` will perform the following subquery on the file path, absolute from the root. For example: `path:"Daily Notes/2020-07"`.
-- `content:` will perform the following subquery on the file content. For example: `content:"happy cat"`.
-- `match-case:` and `ignore-case:` will override the case sensitive match logic for the following subquery.
-- `tag:` will search for your specified tag within a file, for example `tag:#work`. This is faster and more accurate than searching for the tag in plaintext `#work`, as it uses the cached information and ignores text in code blocks and sections that aren't markdown text.
-- `line:(...)` will perform the subquery on a line-by-line basis, rather than a file-by-file basis. For example, if you search for `foo bar`, this could match a file that has `foo` in the first paragraph and `bar` in the last paragraph. Searching for `line:(foo bar)` will only match if `foo` and `bar` are on the same line.
-- `block:(...)` will perform the subquery on a block-by-block basis, where each block defined as a markdown block, typically separated by empty lines. This is expensive computationally as it requires parsing each file, which means this is likely slower than other modes.
-- `section:(...)` will perform the subquery on a section-by-section basis, where each section is the text between two headings, including the first heading.
+- `file:` произведет поиск по имени файла. Например: `file:".jpg"`. Если вы применяете методику Zettelkasten с использованием UID в имени файлов, то это может позволить сузить временной интервал поиска, например `file:"202007"`отобразит файлы за июль 2020.
+- `path:` произведет поиск по абсолютному пути до файла от корня хранилища. Например: `file:"Daily Notes/2020-07"`.
+- `content:` произведет поиск по содержимому файла. Например: `content:"happy cat"`.
+- `match-case:` и `ignore-case:` задает логику чувствительности к регистру для поискового запроса.
+- `tag:` произведет поиск по указанному тегу, например `tag:#work`. Это работает быстрее и точнее чем поиск тега `#work` без соответствующего оператора, поскольку при этом используется кэшированная информация и игнорируется текст в блоках кода и разделах с не Markdown-текстом.
+- `line:(...)` произведет построчный поиск, а не базовый по файлам. Например, запрос `foo bar` может выдать файл, в котором `foo` находится в первом абзаце, а `bar` в последнем. Поиск с `line:(foo bar)` выдаст только те файлы, где `foo` и `bar` находятся в одной строке.
+- `block:(...)` произведет поиск по блокам, где каждый блок определяется как блок Markdown и обычно отделен пустыми строками. Поиск в таком режиме может быть медленнее, так как требуется больше вычислений для синтаксического анализ каждого файла.
+- `section:(...)` произведет поиск по секциям, где каждая секция, это текст между двумя заголовками, включая первый заголовок.
