--- a/Продвинутое использование/Ранние сборки.md
+++ b/Продвинутое использование/Ранние сборки.md
@@ -10,4 +10,4 @@
 
 ### Сообщить о проблемах
 
-Если вы участник нашего Discord сервера, вы можете перейти на канал #insider-build, чтобы сообщить о проблемах. Если вы отправляете отчет об ошибке на форуме, не забудьте указать версию, которую вы используете, чтобы мы могли улучшить ее, перед выпуском общедоступной версии.
+Если вы участник нашего Discord сервера, вы можете перейти на канал \#insider-build, чтобы сообщить о проблемах. Если вы отправляете отчет об ошибке на форуме, не забудьте указать версию, которую вы используете, чтобы мы могли улучшить ее, перед выпуском общедоступной версии.
