--- a/Плагины/Поиск.md
+++ b/Плагины/Поиск.md
@@ -2,7 +2,7 @@
 
 Поиск является мощной функцией и может смутить своей сложностью. В большинстве случаев, если вы просто напечатаете то, что хотите найти, это сработает. Но у поиска есть много возможностей для уточнения, чтобы найти именно то, что вы хотите.
 
-## Быстрые советы
+## Быстрый старт
 
 ### Начните поиск
 
